--- a/index.html
+++ b/index.html
@@ -4,37 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/default.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>LevelUp - Potency enhancer</title>
 </head>
 
 <body>
   <header></header>
   <main>
-    <section>
-      <h1>Main heading</h1>
-      <img src="" alt="">
+    <article class="promo-1">
       <div>
+        <h1>LevelUp - potency enhancer</h1>
+        <img src="./img/product.webp" alt="LevelUp photo">
         <ul>
           <li>
-            <p></p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis omnis amet, numquam alias similique
+              voluptates voluptatibus sunt ducimus, ea vero sit, deserunt totam?</p>
           </li>
           <li>
-            <p></p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis omnis amet, numquam alias similique
+              voluptates voluptatibus sunt ducimus, ea vero sit, deserunt totam?</p>
           </li>
           <li>
-            <p></p>
-          </li>
-          <li>
-            <p></p>
-          </li>
-          <li>
-            <p></p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis omnis amet, numquam alias similique
+              voluptates voluptatibus sunt ducimus, ea vero sit, deserunt totam?</p>
           </li>
         </ul>
-        <a href=""></a>
+        <a href="#">order</a>
       </div>
-    </section>
-    <section>
+      <video src="./video/promo-background.mp4" autoplay muted loop></video>
+    </article>
+    <article>
       <img src="" alt="">
       <a href=""></a>
       <ul>
@@ -57,8 +59,8 @@
           <p></p>
         </li>
       </ul>
-    </section>
-    <section>
+    </article>
+    <article>
       <div>
         <ul>
           <li>
@@ -78,8 +80,8 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section>
+    </article>
+    <article>
       <img src="" alt="">
       <p></p>
       <div>
@@ -96,7 +98,7 @@
         </ul>
         <a href=""></a>
       </div>
-    </section>
+    </article>
     <footer>
       <h2>Footer heading</h2>
       <p></p>
