article.composition:add desktop version

--- a/index.html
+++ b/index.html
@@ -32,31 +32,51 @@
               voluptates voluptatibus sunt ducimus, ea vero sit, deserunt totam?</p>
           </li>
         </ul>
-        <a href="#">order</a>
+        <a href="#">Order</a>
       </div>
       <video src="./video/promo-background.mp4" autoplay muted loop></video>
     </article>
-    <article>
-      <img src="" alt="">
-      <a href=""></a>
+    <article class="composition">
+      <div class="product-box">
+        <img src="./img/product.webp" alt="LevelUp photo">
+        <a href="#">Order</a>
+      </div>
       <ul>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <div class="img-box">
+            <img src="./img/composition-img.avif" alt="ingredient">
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <div class="img-box">
+            <img src="./img/composition-img.avif" alt="ingredient">
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <div class="img-box">
+            <img src="./img/composition-img.avif" alt="ingredient">
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <div class="img-box">
+            <img src="./img/composition-img.avif" alt="ingredient">
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <div class="img-box">
+            <img src="./img/composition-img.avif" alt="ingredient">
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <div class="img-box">
+            <img src="./img/composition-img.avif" alt="ingredient">
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
       </ul>
     </article>
