article.composition:add mobile adaptive

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           <div class="img-box">
             <img src="./img/composition-img.avif" alt="ingredient">
           </div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing
+            elit</p>
         </li>
         <li>
           <div class="img-box">
@@ -58,13 +59,15 @@
           <div class="img-box">
             <img src="./img/composition-img.avif" alt="ingredient">
           </div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia dignissimos, officiis fuga quidem
+            repellendus aperiam sed eaque illum neque commodi. </p>
         </li>
         <li>
           <div class="img-box">
             <img src="./img/composition-img.avif" alt="ingredient">
           </div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+          <p>Laboriosam nostrum esse iste est? Vitae laboriosam neque
+            animi exercitationem?</p>
         </li>
         <li>
           <div class="img-box">
