article.feedback:add carousel with mobile adaptive, use swiper-slider

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./img/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="./favicon.ico" type="image/svg+xml">
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script defer src="./js/script.js"></script>
   <title>LevelUp - Potency enhancer</title>
 </head>
 
@@ -83,25 +88,39 @@
         </li>
       </ul>
     </article>
-    <article>
-      <div>
-        <ul>
-          <li>
-            <img src="" alt="">
-            <h2></h2>
-            <blockquote></blockquote>
+    <article class="feedback">
+      <div class="swiper feedback-swiper">
+        <ul class="swiper-wrapper">
+          <li class="swiper-slide">
+            <div>
+              <img src="./img/feedback-img-1.avif" alt="Satisfied client">
+              <h2>Name Surname</h2>
+              <blockquote>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore placeat perspiciatis
+                voluptas sint deleniti, atque deserunt error quia quae! Quo fuga eligendi, necessitatibus sit ipsa
+                repellat nostrum ab consequuntur quis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas,
+                laboriosam, beatae earum numquam similique incidunt veniam quasi reprehenderit, delectus magnam
+                repudiandae et enim id voluptas. Assumenda iste officia esse consequuntur?</blockquote>
+            </div>
           </li>
-          <li>
-            <img src="" alt="">
-            <h2></h2>
-            <blockquote></blockquote>
+          <li class="swiper-slide">
+            <div>
+              <img src="./img/feedback-img-1.avif" alt="Satisfied client">
+              <h2>Name Surname</h2>
+              <blockquote>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore placeat perspiciatis
+                voluptas sint deleniti atque deserunt error quia quae!</blockquote>
+            </div>
           </li>
-          <li>
-            <img src="" alt="">
-            <h2></h2>
-            <blockquote></blockquote>
+          <li class="swiper-slide">
+            <div>
+              <img src="./img/feedback-img-1.avif" alt="Satisfied client">
+              <h2>Name Surname</h2>
+              <blockquote>Quo fuga eligendi, necessitatibus sit ipsa repellat nostrum ab consequuntur quis.</blockquote>
+            </div>
           </li>
         </ul>
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
       </div>
     </article>
     <article>
