article.promo-2:done with mobile adaptive

--- a/index.html
+++ b/index.html
@@ -123,23 +123,24 @@
         <div class="swiper-button-next"></div>
       </div>
     </article>
-    <article>
-      <img src="" alt="">
-      <p></p>
-      <div>
-        <ul>
-          <li>
-            <p></p>
-          </li>
-          <li>
-            <p></p>
-          </li>
-          <li>
-            <p></p>
-          </li>
-        </ul>
-        <a href=""></a>
-      </div>
+    <article class="promo-2">
+      <img src="./img/doctor-product.avif" alt="man with product">
+      <p class="spec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda aspernatur debitis beatae
+        quisquam necessitatibus, quam fugiat molestiae dolor consectetur iste laudantium nam enim.</p>
+      <ul>
+        <li>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur natus est molestiae.</p>
+        </li>
+        <li>
+          <p>Cum explicabo, eum fugit vel perferendis qui nihil, hic labore architecto rerum illo accusamus
+            necessitatibus!</p>
+        </li>
+        <li>
+          <p>Vitae minus eaque sapiente pariatur reprehenderit maxime ad culpa dolor iste ipsam repudiandae ab tempore
+            dicta! Aut, odit.</p>
+        </li>
+      </ul>
+      <a href="#">Order</a>
     </article>
     <footer>
       <h2>Footer heading</h2>
