footer:desktop version, no timer yet

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <main>
     <article class="promo-1">
       <div>
-        <h1>LevelUp - potency enhancer</h1>
-        <img src="./img/product.webp" alt="LevelUp photo">
+        <h1 class="main-title">LevelUp - potency enhancer</h1>
+        <img src="./img/product.webp" alt="The best potency enhancer photo">
         <ul>
           <li>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis omnis amet, numquam alias similique
@@ -43,7 +43,7 @@
     </article>
     <article class="composition">
       <div class="product-box">
-        <img src="./img/product.webp" alt="LevelUp photo">
+        <img src="./img/product.webp" alt="The best potency enhancer photo">
         <a href="#">Order</a>
       </div>
       <ul>
@@ -124,7 +124,7 @@
       </div>
     </article>
     <article class="promo-2">
-      <img src="./img/doctor-product.avif" alt="man with product">
+      <img src="./img/doctor-product.avif" alt="Doctor advices the best potency enhancer">
       <p class="spec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda aspernatur debitis beatae
         quisquam necessitatibus, quam fugiat molestiae dolor consectetur iste laudantium nam enim.</p>
       <ul>
@@ -142,26 +142,29 @@
       </ul>
       <a href="#">Order</a>
     </article>
-    <footer>
-      <h2>Footer heading</h2>
-      <p></p>
-      <div>
-        <img src="" alt="">
-        <p></p>
-      </div>
-      <form action="">
-        <label>
-          <input type="text">
-          <span></span>
-        </label>
-        <label>
-          <input type="tel">
-          <span></span>
-        </label>
-        <button></button>
-      </form>
-    </footer>
   </main>
+  <footer>
+    <h2 class="main-title">LevelUp - potency enhancer</h2>
+    <p class="timer">timer</p>
+    <div class="sale">
+      <p class="price">
+        <span>30$</span>
+        <span>15$</span>
+      </p>
+      <img src="./img/product.webp" alt="The best potency enhancer photo">
+    </div>
+    <form>
+      <label>
+        <input type="text">
+        <span>Surname Name Secondname</span>
+      </label>
+      <label>
+        <input type="tel">
+        <span>89997776655</span>
+      </label>
+      <button>Request a call</button>
+    </form>
+  </footer>
 
 </body>
 
