--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   </main>
   <footer>
     <h2 class="main-title">LevelUp - potency enhancer</h2>
-    <p class="timer">timer</p>
+    <p id="timer" class="timer"></p>
     <div class="sale">
       <p class="price">
         <span>30$</span>
@@ -153,7 +153,7 @@
       </p>
       <img src="./img/product.webp" alt="The best potency enhancer photo">
     </div>
-    <form>
+    <form id="order-form">
       <label>
         <input type="text">
         <span>Surname Name Secondname</span>
