add hover-effects and shadows

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
               voluptates voluptatibus sunt ducimus, ea vero sit, deserunt totam?</p>
           </li>
         </ul>
-        <a href="#">Order</a>
+        <a href="#order-form">Order</a>
       </div>
       <video src="./video/promo-background.mp4" autoplay muted loop></video>
     </article>
     <article class="composition">
       <div class="product-box">
         <img src="./img/product.webp" alt="The best potency enhancer photo">
-        <a href="#">Order</a>
+        <a href="#order-form">Order</a>
       </div>
       <ul>
         <li>
@@ -129,7 +129,7 @@
             dicta! Aut, odit.</p>
         </li>
       </ul>
-      <a href="#">Order</a>
+      <a href="#order-form">Order</a>
     </article>
   </main>
   <footer>
@@ -144,11 +144,11 @@
     </div>
     <form id="order-form">
       <label>
-        <input type="text">
+        <input type="text" title="Insert Full Name">
         <span>Surname Name Secondname</span>
       </label>
       <label>
-        <input type="tel">
+        <input type="number" title="Insert phone number">
         <span>89997776655</span>
       </label>
       <button>Request a call</button>
