--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="./css/animation.css">
   <link rel="stylesheet" href="./css/default.css">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" href="./img/favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="./favicon.ico" type="image/svg+xml">
+  <link rel="icon" href="./img/product.webp" type="image/webp">
   <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script defer src="./js/script.js"></script>
   <title>LevelUp - Potency enhancer</title>
