--- a/index.html
+++ b/index.html
@@ -4,119 +4,155 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/animation.css">
+  <link rel="stylesheet" href="./css/default.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="./img/product.webp" type="image/webp">
+  <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script defer src="./js/script.js"></script>
   <title>LevelUp - Potency enhancer</title>
 </head>
 
 <body>
   <header></header>
   <main>
-    <section>
-      <h1>Main heading</h1>
-      <img src="" alt="">
+    <article class="promo-1">
       <div>
+        <h1 class="main-title">LevelUp - potency enhancer</h1>
+        <img src="./img/product.webp" alt="The best potency enhancer photo">
         <ul>
           <li>
-            <p></p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis omnis amet, numquam alias similique
+              voluptates voluptatibus sunt ducimus, ea vero sit, deserunt totam?</p>
           </li>
           <li>
-            <p></p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis omnis amet, numquam alias similique
+              voluptates voluptatibus sunt ducimus, ea vero sit, deserunt totam?</p>
           </li>
           <li>
-            <p></p>
-          </li>
-          <li>
-            <p></p>
-          </li>
-          <li>
-            <p></p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis omnis amet, numquam alias similique
+              voluptates voluptatibus sunt ducimus, ea vero sit, deserunt totam?</p>
           </li>
         </ul>
-        <a href=""></a>
+        <a href="#order-form">Order</a>
       </div>
-    </section>
-    <section>
-      <img src="" alt="">
-      <a href=""></a>
+      <video src="./video/promo-background.mp4" autoplay muted loop></video>
+    </article>
+    <article class="composition">
+      <div class="product-box">
+        <img src="./img/product.webp" alt="The best potency enhancer photo">
+        <a href="#order-form">Order</a>
+      </div>
       <ul>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <img src="./img/composition-img.webp" alt="ingredient">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing
+            elit</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <img src="./img/composition-img.webp" alt="ingredient">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <img src="./img/composition-img.webp" alt="ingredient">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia dignissimos, officiis fuga quidem
+            repellendus aperiam sed eaque illum neque commodi. </p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <img src="./img/composition-img.webp" alt="ingredient">
+          <p>Laboriosam nostrum esse iste est? Vitae laboriosam neque
+            animi exercitationem?</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <img src="./img/composition-img.webp" alt="ingredient">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
-        <li><img src="" alt="">
-          <p></p>
+        <li>
+          <img src="./img/composition-img.webp" alt="ingredient">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </li>
       </ul>
-    </section>
-    <section>
-      <div>
-        <ul>
-          <li>
-            <img src="" alt="">
-            <h2></h2>
-            <blockquote></blockquote>
+    </article>
+    <article class="feedback">
+      <div class="swiper feedback-swiper">
+        <ul class="swiper-wrapper">
+          <li class="swiper-slide">
+            <div>
+              <img src="./img/feedback-img-1.avif" alt="Satisfied client">
+              <h2>Name Surname</h2>
+              <blockquote>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore placeat perspiciatis
+                voluptas sint deleniti, atque deserunt error quia quae! Quo fuga eligendi, necessitatibus sit ipsa
+                repellat nostrum ab consequuntur quis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas,
+                laboriosam, beatae earum numquam similique incidunt veniam quasi reprehenderit, delectus magnam
+                repudiandae et enim id voluptas. Assumenda iste officia esse consequuntur?</blockquote>
+            </div>
           </li>
-          <li>
-            <img src="" alt="">
-            <h2></h2>
-            <blockquote></blockquote>
+          <li class="swiper-slide">
+            <div>
+              <img src="./img/feedback-img-1.avif" alt="Satisfied client">
+              <h2>Name Surname</h2>
+              <blockquote>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore placeat perspiciatis
+                voluptas sint deleniti atque deserunt error quia quae!</blockquote>
+            </div>
           </li>
-          <li>
-            <img src="" alt="">
-            <h2></h2>
-            <blockquote></blockquote>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section>
-      <img src="" alt="">
-      <p></p>
-      <div>
-        <ul>
-          <li>
-            <p></p>
-          </li>
-          <li>
-            <p></p>
-          </li>
-          <li>
-            <p></p>
+          <li class="swiper-slide">
+            <div>
+              <img src="./img/feedback-img-1.avif" alt="Satisfied client">
+              <h2>Name Surname</h2>
+              <blockquote>Quo fuga eligendi, necessitatibus sit ipsa repellat nostrum ab consequuntur quis.</blockquote>
+            </div>
           </li>
         </ul>
-        <a href=""></a>
+        <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
       </div>
-    </section>
-    <footer>
-      <h2>Footer heading</h2>
-      <p></p>
-      <div>
-        <img src="" alt="">
-        <p></p>
-      </div>
-      <form action="">
-        <label>
-          <input type="text">
-          <span></span>
-        </label>
-        <label>
-          <input type="tel">
-          <span></span>
-        </label>
-        <button></button>
-      </form>
-    </footer>
+    </article>
+    <article class="promo-2">
+      <img src="./img/doctor-product.webp" alt="Doctor advices the best potency enhancer">
+      <p class="spec">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda aspernatur debitis beatae
+        quisquam necessitatibus, quam fugiat molestiae dolor consectetur iste laudantium nam enim.</p>
+      <ul>
+        <li>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur natus est molestiae.</p>
+        </li>
+        <li>
+          <p>Cum explicabo, eum fugit vel perferendis qui nihil, hic labore architecto rerum illo accusamus
+            necessitatibus!</p>
+        </li>
+        <li>
+          <p>Vitae minus eaque sapiente pariatur reprehenderit maxime ad culpa dolor iste ipsam repudiandae ab tempore
+            dicta! Aut, odit.</p>
+        </li>
+      </ul>
+      <a href="#order-form">Order</a>
+    </article>
   </main>
+  <footer>
+    <h2 class="main-title">LevelUp - potency enhancer</h2>
+    <p id="timer" class="timer"></p>
+    <div class="sale">
+      <p class="price">
+        <span>30$</span>
+        <span>15$</span>
+      </p>
+      <img src="./img/product.webp" alt="The best potency enhancer photo">
+    </div>
+    <form id="order-form">
+      <label>
+        <input type="text" title="Insert Full Name">
+        <span>Surname Name Secondname</span>
+      </label>
+      <label>
+        <input type="number" title="Insert phone number">
+        <span>89997776655</span>
+      </label>
+      <button>Request a call</button>
+    </form>
+  </footer>
 
 </body>
 
